# cs2620-replication

./: .client_custom_wp.py.swp  .gitignore  .pre-commit-config.yaml  README.md  chat.proto  chat_db  chat_db.bak  chat_db.db  chat_db.dir  chat_db_gdbm  chat_pb2.py  chat_pb2_grpc.py  chat_server.py  client.py  client_cli.py  client_custom_wp.py  client_grpc.py  cluster_config.json  cluster_config_1.json  cluster_config_2.json  cluster_config_3.json  cluster_config_4.json  cluster_config_5.json  config.json  config.py  cs262-bak.py  cs262.py  demo.py  distributed_demo.py  documentation.md  engineering-notebook-michal-natnael.md  engineering-notebook-michal.md  gui.py  hw2-benchmark.py  hw2-engineering-notebook.md  mypy.ini  notes.md  pyproject.toml  pytest.ini  raft.proto  (+18 more)
.github/workflows/: ci.yml
data/1/: log  metadata.json
data/2/: log  metadata.json
data/3/: log  metadata.json
data/4/: log  snapshot
data/5/: log  metadata.json
legacy/: cs262.py  legacy_server.py
legacy_tests/: chat_db.dir  cluster_config_1.json  cluster_config_2.json  cluster_config_4.json  config.json  test_client_grpc.py  test_server_grpc.py
tests/: config.json  test_chat_server.py  test_client.py  test_client_grpc.py  test_config.py  test_custom_protocol_client.py  test_custom_protocol_server.py  test_raft.py  test_storage.py
