[project]
name = "cs2620"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.6",
    "types-protobuf>=5.29.1.20250208",
]
